kubernetes/archive/automation/08-n8n.deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-deployment
  namespace: automation
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
        - name: n8n
          image: docker.n8n.io/n8nio/n8n
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5678
              protocol: TCP
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: n8n-storage
              subPath: n8n
      volumes:
        - name: n8n-storage
          persistentVolumeClaim:
            claimName: nfs-pvc-n8n
