kubernetes/archive/automation/13-n8n.ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: automation
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  rules:
    - host: flow.example.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n-service
                port:
                  number: 80
          - path: /webhook
            pathType: Prefix
            backend:
              service:
                name: n8n-webhook-service
                port:
                  number: 80
